<resources>
    <string name="app_name">MyNike Store</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="special_offer">Special Offer</string>
    <string name="view_all">View All</string>

    <string name="popular">Popular</string>
    <string name="latest">Latest</string>
    <string name="asce">Price Ascending</string>
    <string name="desc">Price Descending</string>

    <string name="comments">Comments</string>
    <string name="insertComment">Add Commment</string>
    <string name="all_comment_s">View All Comment\'s</string>
    <string name="test_text">this is sample app this is just for show .</string>
    <string name="product_list">Product List</string>
    <string name="sort">Sort</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="succes_add_to_cart">Successfully added to cart !</string>

    <string name="SignIn_screen_title">Login to your account</string>
    <string name="SignIn">SignIn</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup_hint">Do you have account ?</string>
    <string name="login_hint">Create new account ?</string>
    <string name="signup">Signup</string>
    <string name="auth_hint">Enter user name and password</string>

    <string name="signup_screen_title">Create Account</string>
    <string name="signin_hint">Do you have account ?</string>
    <string name="pay">Proceed to checkout</string>
    <string name="count">Count</string>
    <string name="remove_from_cart">Remove from cart</string>
    <string name="purchaseDetail">Purchase detail</string>
    <string name="total_price">Total Price</string>
    <string name="shipping_cost">Shipping</string>
    <string name="payablePrice">Order total</string>
    <string name="discount">Discount</string>

    <string name="cartEmptyStateLoginRequired">Login to your account .</string>
    <string name="cartEmptyStateCallToAction">Login</string>
    <string name="cart_empty_state">Add a product .</string>
    <string name="shippingToolbarTitle">Shipping and payment method</string>
    <string name="online_payment">Online payment</string>
    <string name="cash_on_delivery">Cash on delivery</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="zip_code">Zip code</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="purchase_status">Purchase Status</string>
    <string name="price">Amount</string>
    <string name="return_home">Home</string>
    <string name="order_history">Order history</string>
    <string name="checkoutToolbarTitle">Payment receipt</string>
    <string name="favorites">Favorites</string>
    <string name="orderHistory">Order history</string>
    <string name="signIn">Login</string>
    <string name="guest_user">Guest</string>
    <string name="signOut">LogOut</string>

    <string name="fav_empty_state_message">Add a product to your favorite list</string>
    <string name="fav_help_message">Long touch for delete from favorite list </string>
    <string name="orderHistory_payable">Order total amount</string>
    <string name="orderHistory_orderId">Order  refrence</string>


    <string-array name="sortTitlesArray">
        <item>@string/latest</item>
        <item>@string/popular</item>
        <item>@string/asce</item>
        <item>@string/desc</item>
    </string-array>
</resources>