<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?android:colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.google.android.material.imageview.ShapeableImageView
            app:shapeAppearance="@style/Avatar"
            app:srcCompat="@drawable/ic_nike_logo"
            app:strokeColor="?dividerColor"
            app:strokeWidth="1dp"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginTop="32dp"
            android:scaleType="centerInside" />

        <TextView
            android:id="@+id/usernameTv"
            tools:text="@string/guest_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAppearance="?textAppearanceBody1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:divider="@drawable/shape_divider"
            android:orientation="vertical"
            android:showDividers="middle|beginning|end">

            <TextView
                style="@style/ProfileLinks"
                app:drawableStartCompat="@drawable/ic_favorite_20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/favorites" />

            <TextView
                style="@style/ProfileLinks"
                app:drawableStartCompat="@drawable/ic_order_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/orderHistory" />

            <TextView
                android:id="@+id/authBtn"
                style="@style/ProfileLinks"
                app:drawableStartCompat="@drawable/ic_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signIn" />
        </LinearLayout>

    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>